--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						<li><a href="#">Guarantee</a></li>
 						<li><a href="#">Blog</a></li>
 						<li><a href="#">Contact</a></li>
-						<li><a href="#"><img src="img/header-logo2.png" alt="Поиск"></a></li>
+						<li><a href="#"><img src="img/header-logo2.png" alt="Поиск" /></a></li>
 					</ul>
 					<div class="clear"></div>
 				</div>	
@@ -79,7 +79,7 @@
 				</div>
 				<div class="content-text">
 					<h2>Free home inspection</h2>
-					<p>One of our certified technicias will come out and do a thorough inspection on your home and provide you with a detalied estimate. This will.</p>
+					<p>One of our certified technicias will come out and do a thorough inspection on your home and provide you with a detalied estimate. This will be a great opportunity for you to learn about your problem areas and how we can help!</p>
 				</div>
 			</div>
 			<div class="article">
@@ -87,8 +87,8 @@
 					<img src="img/content-logo3.png" alt="Изображение3" />
 				</div>
 				<div class="content-text">
-					<h2>Free home inspection</h2>
-					<p>Submit your information above and we will can you to schedule your free home inspection and provide you with an estimate. No hassell. No commitment.No fees.</p>
+					<h2>get real answers</h2>
+					<p>Here at Affordable Waterproofing, we take pride in our customer service. We will spend time with you and answer all your questions. Take advantage of this FREE estimate and learn about your problem and see how we can help</p>
 				</div>
 			</div>
 			<div class="article">
@@ -96,9 +96,65 @@
 					<img src="img/content-logo4.png" alt="Изображение4" />
 				</div>
 				<div class="content-text">
-					<h2>Free home inspection</h2>
-					<p>Submit your information above and we will can you to schedule your free home inspection and provide you with an estimate. No hassell. No commitment.No fees.</p>
+					<h2>receive a &#36;1000 off </h2>
+					<p>If you decide to move forward with us, we  are offering a $1000 internet discount. Don’t miss out on this great opportunity to SAVE!</p>
 				</div>
+			</div>
+		</div>
+		<div class="footer">
+			<div class="footer-content">
+				<div class="address">
+				 	<h3>Address</h3>
+					<ul>
+						<li>Affordable Waterproofing LLC</li>
+						<li>8000 N.Rte 130</li>
+						<li>Delran, NJ, 08075</li>
+						<li>Phone:</li>
+						<li>(856) 461-1500</li>
+						<li>Toll-free:</li>
+						<li>(877)872-8301</li>
+					</ul>
+				</div>
+				<div class="location">
+					<h3>Location</h3>
+					<img src="img/map.png" alt="Карта" />
+					<p><a href="#">View Larger Map</a></p>
+				</div>
+				<div class="posts">
+					<h3>Recent posts</h3>
+					<ul>
+						<li><a href="#">Shoul I Buy A House with A Wet Basement?</a> </li>
+						<li><a href="#">Listen to What Your Home is Telling You:Foundation Cracks</a></li>
+						<li><a href="#">Does Every House Need a Sump Pump?</a></li>
+						<li><a href="#">Five Questions for Your Basement Waterproofing Contractor</a></li>
+						<li><a href="#">Protect Your Home from Hurricane Seasson</a></li>
+					</ul>
+				</div>
+				<div class="tweets">
+					<div class="tweets-column">
+						<h3>Recent tweets</h3>
+						<ul>
+							<li>Protect Your Home from Hurricane Seasson<br><a href="#">http://t.co/rSqbcwcYX6</a></br><a href="#">2 weeks ago</a></li>
+							<li>Five Questions for Your Basement Waterproofing Contractor<br><a href="#">http://t.co/Y9Tp3jrZ2P</a></br><a href="#">2 weeks ago</a></li>
+							<li>Does Every House Need a Sump Pump?<br><a href="#">http://t.co/KY2rl438hU</a></br><a href="#">2 weeks ago</a></li>
+						</ul>
+					</div>
+				</div>	
+			</div>
+			<div class="footer-bottom">
+				<div class="footer-content2">
+					<div class="copyright">
+						<p>Copyright 2014 Affortable Waterproofing,LLC <span> All Rights Reserved </span> Site by: <a href="#">Celerify</a></p>
+					</div>
+					<div class="footer-social">
+						<ul>
+							<li><a href="#"><img src="img/footer-facebook.png" alt="Фейсбук" /></a></li>
+							<li><a href="#"><img src="img/footer-twitter.png" alt="Твиттер"/></a></li>
+							<li><a href="#"><img src="img/footer-youtube.png" alt="Ютьюб"/></a></li>
+							<li><a href="#"><img src="img/footer-google.png" alt="Гугл"/></a></li>
+						</ul>
+					</div>
+				</div>	
 			</div>
 		</div>
 	</body>
